feat: add header structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header>
+        <nav class="flex">
+            <div>
+                <a href="http://">Donna</a>
+                <a href="http://">uomo</a>
+                <a href="http://">bambini</a>
+            </div>
+            <img src="img/boolean-logo.png" alt="logo">
+            <div>
+                icone
+            </div>
+        </nav>
+    </header>
     
 </body>
 </html>
