feat: add footer structure

--- a/index.html
+++ b/index.html
@@ -21,7 +21,30 @@
             </div>
         </nav>
     </header>
-    <div class="sfumatura"></div>
+    <main>
+        <div class="sfumatura"></div>
+
+        <div class="flex">
+            <div class="card"></div>
+        </div>
+    </main>
+    <footer>
+        <div class="flex">
+            <div>
+                <h3>Boolando s.r.l.</h3>
+                <a href="http://">informazioni legali</a>
+                <a href="http://">informazioni sulla privacy</a>
+                <a href="http://">diritto di recesso</a>
+            </div>
+            <div>
+                <h4>Trovaci anche su</h4>
+                <span>
+                    icone
+                </span>
+            </div>
+        </div>
+    </footer>
+
     
 </body>
 </html>
