--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+     <!-- css fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+    <!-- css base -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -17,7 +20,9 @@
             </div>
             <img src="img/boolean-logo.png" alt="logo">
             <div>
-                icone
+                <a href=""><i class="fa-regular fa-user"></i></a>   
+                <a href=""><i class="fa-regular fa-heart"></i></a>   
+                <a href=""><i class="fa-solid fa-bag-shopping"></i></a>   
             </div>
         </nav>
     </header>
@@ -39,7 +44,11 @@
             <div>
                 <h4>Trovaci anche su</h4>
                 <span>
-                    icone
+                    <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+                    <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+                    <a href=""><i class="fa-brands fa-square-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-square-pinterest"></i></a>
+                    <a href=""><i class="fa-brands fa-square-youtube"></i></a>
                 </span>
             </div>
         </div>
