feat: add structure first card

--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
         <div class="sfumatura"></div>
     </header>
     <main>
-
-
         <div class="flex">
-            <div class="card"></div>
+            <div class="card">
+                <img src="img/1.webp" alt="">
+                <p>Levi's</p>
+                <h2>Relaxed fit tee unisex</h2>
+                <span class="scontato">14,99€</span>
+                <span class="barrato">29,99€</span>
+            </div>
         </div>
     </main>
     <footer>
