feat: add heart

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <main>
         <div class="flex">
             <div class="card">
+                <div class="cuore">&hearts;</div>
+                <div class="sconto"></div>
+                <div class="eco"></div>
                 <img src="img/1.webp" alt="">
                 <p>Levi's</p>
                 <h2>Relaxed fit tee unisex</h2>
