feat: add sales and sostenibility

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="flex">
             <div class="card">
                 <div class="cuore">&hearts;</div>
-                <div class="sconto"></div>
-                <div class="eco"></div>
+                <div class="sconto">-50%</div>
+                <div class="eco">sostenibilità</div>
                 <img src="img/1.webp" alt="">
                 <p>Levi's</p>
                 <h2>Relaxed fit tee unisex</h2>
