feat: heart first card complete

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <div class="flex">
             <div class="card">
-                <div class="cuore">&hearts;</div>
+                <div class="cuore flex"><span>&hearts;</span></div>
                 <div class="sconto">-50%</div>
                 <div class="eco">sostenibilità</div>
                 <img src="img/1.webp" alt="">
