--- a/index.html
+++ b/index.html
@@ -39,8 +39,53 @@
                 <span class="scontato">14,99€</span>
                 <span class="barrato">29,99€</span>
             </div>
+            <div class="card">
+                <div class="cuore flex"><span>&hearts;</span></div>
+                <div class="sconto">-30%</div>
+                <img src="img/2.webp" alt="">
+                <p>Guess</p>
+                <h2>Roses tee</h2>
+                <span class="scontato">20,99€</span>
+                <span class="barrato">29,99€</span>
+            </div>
+            <div class="card">
+                <div class="cuore flex"><span>&hearts;</span></div>
+                <div class="sconto">-30%</div>
+                <img src="img/3.webp" alt="">
+                <p>Come Zucchero Filato</p>
+                <h2>Voglia di colori pastello</h2>
+                <span class="scontato">129,99€</span>
+                <span class="barrato">184,99€</span>
+            </div>
+            <div class="card">
+                <div class="cuore flex"><span>&hearts;</span></div>
+                <div class="sconto">-50%</div>
+                <div class="eco">sostenibilità</div>
+                <img src="img/4.webp" alt="">
+                <p>Levi's</p>
+                <h2>tee unisex</h2>
+                <span class="scontato">14,99€</span>
+                <span class="barrato">29,99€</span>
+            </div>
+            <div class="card">
+                <div class="cuore flex"><span>&hearts;</span></div>
+                <img src="img/5.webp" alt="">
+                <p>Maya Deluxe</p>
+                <h2>Stripe Bodice</h2>
+                <span class="scontato">99,99€</span>
+            </div>
+            <div class="card">
+                <div class="cuore flex"><span>&hearts;</span></div>
+                <div class="eco1">sostenibilità</div>
+                <img src="img/6.webp" alt="">
+                <p>Esprit</p>
+                <h2>maglione - black</h2>
+                <span class="scontato">29,99€</span>
+            </div>
+
         </div>
     </main>
+
     <footer>
         <div class="flex">
             <div>
