--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                 <div class="cuore flex"><span>&hearts;</span></div>
                 <div class="sconto">-50%</div>
                 <div class="eco">sostenibilità</div>
-                <img src="img/1.webp" alt="">
+                <img src="img/1.webp" alt="" class="immagine">
+                <img src="img/1b.webp" alt="" class="immagine1">
                 <p>Levi's</p>
                 <h2>Relaxed fit tee unisex</h2>
                 <span class="scontato">14,99€</span>
@@ -42,7 +43,8 @@
             <div class="card">
                 <div class="cuore flex"><span>&hearts;</span></div>
                 <div class="sconto">-30%</div>
-                <img src="img/2.webp" alt="">
+                <img src="img/2.webp" alt="" class="immagine">
+                <img src="img/2b.webp" alt="" class="immagine1">
                 <p>Guess</p>
                 <h2>Roses tee</h2>
                 <span class="scontato">20,99€</span>
@@ -51,7 +53,8 @@
             <div class="card">
                 <div class="cuore flex"><span>&hearts;</span></div>
                 <div class="sconto">-30%</div>
-                <img src="img/3.webp" alt="">
+                <img src="img/3.webp" alt="" class="immagine">
+                <img src="img/3b.webp" alt="" class="immagine1">
                 <p>Come Zucchero Filato</p>
                 <h2>Voglia di colori pastello</h2>
                 <span class="scontato">129,99€</span>
@@ -61,7 +64,8 @@
                 <div class="cuore flex"><span>&hearts;</span></div>
                 <div class="sconto">-50%</div>
                 <div class="eco">sostenibilità</div>
-                <img src="img/4.webp" alt="">
+                <img src="img/4.webp" alt="" class="immagine">
+                <img src="img/4b.webp" alt="" class="immagine1">
                 <p>Levi's</p>
                 <h2>tee unisex</h2>
                 <span class="scontato">14,99€</span>
@@ -69,7 +73,8 @@
             </div>
             <div class="card">
                 <div class="cuore flex"><span>&hearts;</span></div>
-                <img src="img/5.webp" alt="">
+                <img src="img/5.webp" alt="" class="immagine">
+                <img src="img/5b.webp" alt="" class="immagine1">
                 <p>Maya Deluxe</p>
                 <h2>Stripe Bodice</h2>
                 <span class="scontato">99,99€</span>
@@ -77,7 +82,8 @@
             <div class="card">
                 <div class="cuore flex"><span>&hearts;</span></div>
                 <div class="eco1">sostenibilità</div>
-                <img src="img/6.webp" alt="">
+                <img src="img/6.webp" alt="" class="immagine">
+                <img src="img/6b.webp" alt="" class="immagine1">
                 <p>Esprit</p>
                 <h2>maglione - black</h2>
                 <span class="scontato">29,99€</span>
