feat: small corrections

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <header>
         <nav class="flex">
             <div>
-                <a href="http://">Donna</a>
-                <a href="http://">uomo</a>
-                <a href="http://">bambini</a>
+                <a href="">Donna</a>
+                <a href="">uomo</a>
+                <a href="">bambini</a>
             </div>
             <img src="img/boolean-logo.png" alt="logo">
             <div>
@@ -96,9 +96,9 @@
         <div class="flex">
             <div>
                 <h3>Boolando s.r.l.</h3>
-                <a href="http://">informazioni legali</a>
-                <a href="http://">informazioni sulla privacy</a>
-                <a href="http://">diritto di recesso</a>
+                <a href="">informazioni legali</a>
+                <a href="">informazioni sulla privacy</a>
+                <a href="">diritto di recesso</a>
             </div>
             <div>
                 <h4>Trovaci anche su</h4>
