--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href=""><i class="fa-solid fa-bag-shopping"></i></a>   
             </div>
         </nav>
-        <div class="sfumatura"></div>
+        <div></div>
     </header>
     <main>
         <div class="flex">
